--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.lernejo</groupId>
-    <artifactId>java_api_training</artifactId>
+    <artifactId>maven_training</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
